Adding extension logic for projects
