# api/swagger/swagger.yaml
@@ -7034,126 +7034,6 @@ paths:
           description: "Access Denied"
           schema:
             $ref: "#/definitions/Error"
-
-
-
-
-  /v2/projects/{projId}/extensions:
-    x-swagger-router-controller: projectV2
-    options:
-      tags:
-        - project
-      summary: "Pre-flight request"
-      operationId: protectedOptions
-      description: "Options on Project Route"
-      parameters:
-        - name: projId
-          in: path
-          description: "ID of project to get"
-          required: true
-          type: string
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/ProjObject"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"
-    post:
-      tags:
-        - project
-      summary: "Add Extension/Suspension to a project"
-      operationId: protectedExtensionAdd
-      description: "Adds Extension/Suspension to a project."
-      security:
-        - Bearer: []
-      x-security-scopes:
-        - staff
-        - sysadmin
-      parameters:
-        - name: projId
-          in: path
-          description: "ID of project to update"
-          required: true
-          type: string
-        - name: extension
-          in: body
-          required: true
-          schema:
-            $ref: "#/definitions/ExtensionObject"
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/ProjObject"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"
-    put:
-      tags:
-        - project
-      summary: "Update Extension/Suspension on a project"
-      operationId: protectedExtensionUpdate
-      description: "Adds Extension/Suspension on a project."
-      security:
-        - Bearer: []
-      x-security-scopes:
-        - staff
-        - sysadmin
-      parameters:
-        - name: projId
-          in: path
-          description: "ID of project to update"
-          required: true
-          type: string
-        - name: extension
-          in: body
-          required: true
-          schema:
-            $ref: "#/definitions/ExtensionObject"
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/ProjObject"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"
-    delete:
-      tags:
-        - project
-      summary: "Delete Extension/Suspension on a project"
-      operationId: protectedExtensionDelete
-      description: "Adds Extension/Suspension on a project."
-      security:
-        - Bearer: []
-      x-security-scopes:
-        - staff
-        - sysadmin
-      parameters:
-        - name: projId
-          in: path
-          description: "ID of project to update"
-          required: true
-          type: string
-        - name: item
-          in: query
-          required: true
-          description: "The extension item to delete."
-          type: string
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/ProjObject"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"
   /v2/projects/{projId}/extensions:
     x-swagger-router-controller: projectV2
     options:
